--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -939,7 +939,7 @@ msgid "Memorandum of Understanding"
 msgstr "Protocole d'accord"
 
 msgid "Draft"
-msgstr "Draft"
+msgstr "Développement"
 
 msgid "Signed"
 msgstr "Signé"
@@ -1724,7 +1724,7 @@ msgid ""
 "A record that starts in the passed cannot be modified on a non-draft PD/SPD"
 msgstr ""
 "Un enregistrement commençant par le passé ne peut pas être modifié sur un PD/"
-"SPD non brouillon"
+"SPD non-développement"
 
 msgid ""
 "Invalid budget data. Total cash should be equal to items number * price per "
@@ -1949,7 +1949,7 @@ msgid ""
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
 "Un PCA avec ce partenaire existe déjà pour ce cycle de programme de pays. Si "
-"l'enregistrement est à l'état \"Brouillon\", veuillez le modifier."
+"l'enregistrement est à l'état \"Développement\", veuillez le modifier."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
@@ -2033,7 +2033,7 @@ msgid ""
 "Programme Document will not change status until the related PCA is in Signed "
 "status"
 msgstr ""
-"L'APC lié à ce document est en projet, suspendu ou terminé. Ce document de "
+"L'APC lié à ce document est en Développement, Suspendu ou Terminé. Ce document de "
 "programme ne changera pas de statut tant que l'APC correspondant n'aura pas "
 "le statut Signé."
 
@@ -2168,7 +2168,7 @@ msgid ""
 "Cannot delete an agreement that is not Draft or has PDs/SSFAs associated "
 "with it"
 msgstr ""
-"Impossible de supprimer un accord qui n'est pas un brouillon ou qui est "
+"Impossible de supprimer un accord qui n'est pas un Développement ou qui est "
 "associé à des PD/SSFA"
 
 msgid "Workspace is required as a queryparam"
@@ -2184,7 +2184,7 @@ msgstr "Les valeurs d'ID doivent être des nombres entiers"
 
 msgid "Deleting an attachment can only be done in Draft status"
 msgstr ""
-"La suppression d'une pièce jointe ne peut être effectuée qu'en état Brouillon"
+"La suppression d'une pièce jointe ne peut être effectuée qu'en état Développement"
 
 msgid ""
 "This PD Output has indicators related, please remove the indicators first"
@@ -2201,10 +2201,10 @@ msgstr ""
 "pour continuer"
 
 msgid "Deleting an indicator is only possible in status Draft."
-msgstr "La suppression d'un indicateur n'est possible qu'en état Brouillon."
+msgstr "La suppression d'un indicateur n'est possible qu'en état Développement."
 
 msgid "Cannot delete a PD or SSFA that is not Draft"
-msgstr "Impossible de supprimer un PD ou SSFA qui n'est pas un brouillon"
+msgstr "Impossible de supprimer un PD ou SSFA qui n'est pas un Développement"
 
 msgid "Cannot delete a PD or SSFA that has Planned Trips"
 msgstr "Impossible de supprimer un PD ou SSFA qui a des trajets planifiés"
@@ -2212,7 +2212,7 @@ msgstr "Impossible de supprimer un PD ou SSFA qui a des trajets planifiés"
 msgid "Cannot delete a PD or SSFA that was manually moved back to Draft"
 msgstr ""
 "Impossible de supprimer un PD ou une SSFA qui a été déplacé manuellement "
-"vers le brouillon"
+"vers le Développement"
 
 msgid "PD has already been sent to Partner."
 msgstr "PD a déjà été envoyé au partenaire."
