--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-24 08:39+0000\n"
+"POT-Creation-Date: 2023-04-24 10:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1609,6 +1609,9 @@ msgstr ""
 
 msgid "Other description required, if type 'Other' selected."
 msgstr "Autre description requise, si le type \"Autre\" est sélectionné."
+
+msgid "Inactive"
+msgstr "Inactif"
 
 msgid "Planned Visit cannot be set for Terminated interventions"
 msgstr ""
