[ch34085] replace Inoperative with No Access for partner staff user status

--- a/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-24 08:39+0000\n"
+"POT-Creation-Date: 2023-05-25 09:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -225,9 +225,14 @@ msgstr "História"
 msgid "Document Type"
 msgstr "Tipo de Documento"
 
-#, python-format
-msgid "[Inactive] %s"
-msgstr "[Inativo] %s"
+msgid "Inactive"
+msgstr "Inativo"
+
+msgid "Invited"
+msgstr "Convidado"
+
+msgid "No Access"
+msgstr "Sem acesso"
 
 msgid "Reference No."
 msgstr "Nº de referência"
