--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-24 08:39+0000\n"
+"POT-Creation-Date: 2023-05-25 09:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -226,9 +226,14 @@ msgstr "التاريخ"
 msgid "Document Type"
 msgstr "نوع الوثيقة"
 
-#, python-format
-msgid "[Inactive] %s"
-msgstr "[غير نشط] %s"
+msgid "Inactive"
+msgstr "غير نشط"
+
+msgid "Invited"
+msgstr "مدعو"
+
+msgid "No Access"
+msgstr "ممنوع الدخول"
 
 msgid "Reference No."
 msgstr "رقم المرجع."
