--- a/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-24 08:39+0000\n"
+"POT-Creation-Date: 2023-05-25 09:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -228,9 +228,14 @@ msgstr "История"
 msgid "Document Type"
 msgstr "Тип документа"
 
-#, python-format
-msgid "[Inactive] %s"
-msgstr "[Неактивно] %s"
+msgid "Inactive"
+msgstr "Неактивный"
+
+msgid "Invited"
+msgstr "Приглашен"
+
+msgid "No Access"
+msgstr "Нет доступа"
 
 msgid "Reference No."
 msgstr "Номер ссылки."
