--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-18 09:35+0000\n"
+"POT-Creation-Date: 2023-05-30 08:57+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1119,6 +1119,9 @@ msgstr "Conseils techniques"
 msgid "Cancel Justification"
 msgstr "Justification de l'annulation"
 
+msgid "Attachments"
+msgstr "Pièces jointes"
+
 msgid "Metadata"
 msgstr "Métadonnées"
 
@@ -1568,9 +1571,6 @@ msgstr "Type de pièce jointe"
 msgid "N/A"
 msgstr "N/A"
 
-msgid "Attachments"
-msgstr "Pièces jointes"
-
 msgid "CSO Contribution"
 msgstr "Contribution des OSC"
 
@@ -1622,6 +1622,9 @@ msgid ""
 msgstr ""
 "Une pièce jointe ne peut pas être modifiée dans les statuts \"Terminé, Fermé "
 "ou Terminé\""
+
+msgid "Unable to find corresponding file type."
+msgstr ""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1888,11 +1891,11 @@ msgstr "Agent autorisé de l'UNICEF"
 msgid "Date Uploaded"
 msgstr "Date du téléchargement"
 
-msgid "Document"
-msgstr "Document"
-
 msgid "Invalid"
 msgstr "Invalide"
+
+msgid "Document"
+msgstr "Document"
 
 msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
