--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-18 09:35+0000\n"
+"POT-Creation-Date: 2023-05-30 08:57+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1109,6 +1109,9 @@ msgstr "Orientaciones técnicas"
 msgid "Cancel Justification"
 msgstr "Cancelar Justificación"
 
+msgid "Attachments"
+msgstr "Archivos adjuntos"
+
 msgid "Metadata"
 msgstr "Metadatos"
 
@@ -1557,9 +1560,6 @@ msgstr "Tipo de fijación"
 msgid "N/A"
 msgstr "N/A"
 
-msgid "Attachments"
-msgstr "Archivos adjuntos"
-
 msgid "CSO Contribution"
 msgstr "Contribución de las OSC"
 
@@ -1612,6 +1612,9 @@ msgid ""
 msgstr ""
 "Un archivo adjunto no se puede cambiar en los estados \"Terminado, Cerrado o "
 "Terminado\""
+
+msgid "Unable to find corresponding file type."
+msgstr ""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1880,11 +1883,11 @@ msgstr "Oficial autorizado de UNICEF"
 msgid "Date Uploaded"
 msgstr "Fecha de carga"
 
-msgid "Document"
-msgstr "Documento"
-
 msgid "Invalid"
 msgstr "INVALID"
+
+msgid "Document"
+msgstr "Documento"
 
 msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
