--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-07 13:42+0000\n"
+"POT-Creation-Date: 2023-06-08 13:29+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1200,8 +1200,8 @@ msgstr "Contribución total de los socios"
 msgid "Total HQ Cash Local"
 msgstr "Total Sede Efectivo Local"
 
-msgid "Unfunded HQ Cash Local"
-msgstr ""
+msgid "Unfunded Capacity Strengthening Cash Local"
+msgstr "Costos de fortalecimiento de capacidades sin fondos"
 
 msgid "Unicef Cash Local"
 msgstr "Unicef Cash Local"
