--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-07 13:42+0000\n"
+"POT-Creation-Date: 2023-06-08 13:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1210,8 +1210,8 @@ msgstr "Contribution totale des partenaires"
 msgid "Total HQ Cash Local"
 msgstr "Total HQ Cash Local"
 
-msgid "Unfunded HQ Cash Local"
-msgstr ""
+msgid "Unfunded Capacity Strengthening Cash Local"
+msgstr "Coûts de renforcement des capacités non financé"
 
 msgid "Unicef Cash Local"
 msgstr "Unicef Cash Local"
