--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-07 13:42+0000\n"
+"POT-Creation-Date: 2023-06-08 13:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1222,8 +1222,8 @@ msgstr "Contribuição total do parceiro"
 msgid "Total HQ Cash Local"
 msgstr "Total da contribuição financeira local para a sede"
 
-msgid "Unfunded HQ Cash Local"
-msgstr ""
+msgid "Unfunded Capacity Strengthening Cash Local"
+msgstr "Custos de Fortalecimento da Capacidade sem financiamento"
 
 msgid "Unicef Cash Local"
 msgstr "Unicef Valor financeiro local"
