--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-07 13:42+0000\n"
+"POT-Creation-Date: 2023-06-08 13:29+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1202,8 +1202,8 @@ msgstr "Общий вклад партнера"
 msgid "Total HQ Cash Local"
 msgstr "Итого взнос на укрепление потенциала (в местной валюте)"
 
-msgid "Unfunded HQ Cash Local"
-msgstr ""
+msgid "Unfunded Capacity Strengthening Cash Local"
+msgstr "Затраты на укрепление потенциала необеспеченный"
 
 msgid "Unicef Cash Local"
 msgstr "Unicef Cash Local"
