new validation message in translations

--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-08 13:29+0000\n"
+"POT-Creation-Date: 2023-06-12 14:15+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1600,6 +1600,11 @@ msgstr "Clasificación de riesgo de la EAE"
 
 msgid "HACT"
 msgstr "Hact"
+
+msgid ""
+"This programme document has unfunded amounts. Please fix them before "
+"deactivating."
+msgstr ""
 
 msgid "This programme document does not include unfunded amounts"
 msgstr ""
