--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-08 13:29+0000\n"
+"POT-Creation-Date: 2023-06-12 14:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1625,6 +1625,11 @@ msgstr "Classificação de risco SEA"
 
 msgid "HACT"
 msgstr "HACT"
+
+msgid ""
+"This programme document has unfunded amounts. Please fix them before "
+"deactivating."
+msgstr ""
 
 msgid "This programme document does not include unfunded amounts"
 msgstr ""
