--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-08 13:29+0000\n"
+"POT-Creation-Date: 2023-06-12 14:15+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1601,6 +1601,11 @@ msgstr "Рейтинг риска СЭН"
 
 msgid "HACT"
 msgstr "ГПДП"
+
+msgid ""
+"This programme document has unfunded amounts. Please fix them before "
+"deactivating."
+msgstr ""
 
 msgid "This programme document does not include unfunded amounts"
 msgstr ""
