Translations for toast messages

--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 14:15+0000\n"
+"POT-Creation-Date: 2023-06-14 12:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1600,9 +1600,10 @@ msgid ""
 "This programme document has unfunded amounts. Please fix them before "
 "deactivating."
 msgstr ""
+".تحتوي وثيقة البرنامج هذه على مبالغ غير ممولة. يرجى إصلاحها قبل التعطيل"
 
-msgid "This programme document does not include unfunded amounts"
-msgstr ""
+msgid "This programme document does not include unfunded amounts."
+msgstr ".لا تتضمن وثيقة البرنامج هذه المبالغ غير الممولة"
 
 msgid ""
 "Cannot add a new amendment while another amendment of same kind is in "
