--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 14:15+0000\n"
+"POT-Creation-Date: 2023-06-14 12:13+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1605,9 +1605,11 @@ msgid ""
 "This programme document has unfunded amounts. Please fix them before "
 "deactivating."
 msgstr ""
+"Este documento de programa tiene montos no financiados. Corríjalos antes de "
+"desactivarlos."
 
-msgid "This programme document does not include unfunded amounts"
-msgstr ""
+msgid "This programme document does not include unfunded amounts."
+msgstr "Este documento de programa no incluye montos no financiados."
 
 msgid ""
 "Cannot add a new amendment while another amendment of same kind is in "
