--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 14:15+0000\n"
+"POT-Creation-Date: 2023-06-14 12:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1630,9 +1630,11 @@ msgid ""
 "This programme document has unfunded amounts. Please fix them before "
 "deactivating."
 msgstr ""
+"Este documento do programa tem valores não financiados. Corrija-os antes de "
+"desativar."
 
-msgid "This programme document does not include unfunded amounts"
-msgstr ""
+msgid "This programme document does not include unfunded amounts."
+msgstr "Este documento do programa não inclui valores não financiados."
 
 msgid ""
 "Cannot add a new amendment while another amendment of same kind is in "
