--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 14:15+0000\n"
+"POT-Creation-Date: 2023-06-14 12:13+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1606,9 +1606,11 @@ msgid ""
 "This programme document has unfunded amounts. Please fix them before "
 "deactivating."
 msgstr ""
+"Этот программный документ имеет необеспеченные суммы. Пожалуйста, исправьте "
+"их перед деактивацией."
 
-msgid "This programme document does not include unfunded amounts"
-msgstr ""
+msgid "This programme document does not include unfunded amounts."
+msgstr "Этот программный документ не включает необеспеченные суммы."
 
 msgid ""
 "Cannot add a new amendment while another amendment of same kind is in "
