--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 14:15+0000\n"
+"POT-Creation-Date: 2023-06-14 12:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1616,9 +1616,11 @@ msgid ""
 "This programme document has unfunded amounts. Please fix them before "
 "deactivating."
 msgstr ""
+"Ce document de programme comporte des montants non financés. Veuillez les "
+"corriger avant de désactiver."
 
-msgid "This programme document does not include unfunded amounts"
-msgstr ""
+msgid "This programme document does not include unfunded amounts."
+msgstr "Ce document de programme n'inclut pas les montants non financés."
 
 msgid ""
 "Cannot add a new amendment while another amendment of same kind is in "
