--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-04 15:48+0000\n"
+"POT-Creation-Date: 2023-07-02 23:14+0000\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1779,6 +1779,9 @@ msgstr "Le numéro de fournisseur doit appartenir au groupe de comptes PRG2"
 
 msgid "Unknown intervention."
 msgstr "Intervention inconnue."
+
+msgid "Results cannot be changed in this status"
+msgstr "Les résultats ne peuvent pas être modifiés dans cet état"
 
 msgid "EZHACT Vision integration disabled"
 msgstr "Intégration d'EZHACT Vision désactivée"
