--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-04 15:48+0000\n"
+"POT-Creation-Date: 2023-07-02 23:14+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1766,6 +1766,9 @@ msgstr "Номер поставщика должен принадлежать к
 
 msgid "Unknown intervention."
 msgstr "Неизвестное вмешательство."
+
+msgid "Results cannot be changed in this status"
+msgstr "Результаты не могут быть изменены в этом статусе"
 
 msgid "EZHACT Vision integration disabled"
 msgstr "Интеграция с EZHACT Vision отключена"
