--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-26 10:45+0000\n"
+"POT-Creation-Date: 2024-01-25 10:45+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -231,6 +231,9 @@ msgstr "ممنوع الدخول"
 
 msgid "Inactive"
 msgstr "غير نشط"
+
+msgid "Special"
+msgstr "خاص"
 
 msgid "Reference No."
 msgstr "رقم المرجع."
